tests/rosetta/out/Zig/array-length.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenarray-length2203144905/001/prog.zig:9:19: error: expected 3 argument(s), found 2
/tmp/zig-0.12.0/lib/std/mem.zig:3148:5: note: function declared here
